# kiota-authentication-azure-python

./: CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_publish.yml  codeql-analysis.yml  publish.yml  release.yml
kiota_authentication_azure/: _exceptions.py  _observability.py  _observability_options.py  _version.py  azure_identity_access_token_provider.py  azure_identity_authentication_provider.py
tests/: helpers.py  test_azure_identity_access_token_provider.py  test_azure_identity_authentication_provider.py
